# rkod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  run.sh  wrapper.h
libs/librknn_api/include/: rknn_api.h  rknn_matmul_api.h
src/: bindings.rs  cv.rs  lib.rs  main.rs  od.rs  testing.c  upload.rs  yolov8.rs
