[package]
name = "rkod"
version = "0.2.0"
edition = "2021"
authors = ["NessajCN"]
repository = "https://github.com/NessajCN/rkod"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }

[build-dependencies]
cc = "1.0"
bindgen = "0.65"
