[package]
name = "rkod"
version = "0.2.0"
edition = "2021"
authors = ["NessajCN <ksnessaj@hotmail.com>"]
repository = "https://github.com/NessajCN/rkod"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-next = { version = "7.0", features = [
    "rk",
], git = "https://github.com/NessajCN/rust-ffmpeg-rk" }
image = "0.25"
libc = "0.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }

# [build-dependencies]
# cc = "1.0"
# bindgen = "0.65"
