[package]
name = "rkod"
version = "0.5.0"
edition = "2024"
authors = ["NessajCN <ksnessaj@hotmail.com>"]
repository = "https://github.com/NessajCN/rkod"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ffmpeg-the-third = "3.0.2+ffmpeg-7.1"
image = "0.25"
libc = "0.2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }

# [build-dependencies]
# cc = "1.0"
# bindgen = "0.65"
